--- a/css/main.css
+++ b/css/main.css
@@ -1,60 +1,173 @@
 body {
-	width: 100%;
-	font-size: 12px;
-	margin: 0px;
+    width: 100%;
+    font-size: 12px;
+    margin: 0px;
 }
 a {
-	text-decoration: none;
-	display: inline-block;
-	color: #555;
-	font-size: 12px;
-	line-height: inherit;
+    text-decoration: none;
+    display: inline-block;
+    word-break: keep-all;
+    color: #555;
+    font-size: 12px/150%;
+    line-height: inherit;
 }
 a:hover {
-	color: red;
+    color: red;
 }
 .header ul{
-	margin:0px;
+    margin:0px;
 
 }
 ul >li{
-	text-decoration: none;
-	display: inline-block;
+    text-decoration: none;
+    display: inline-block;
 }
 .full {
-	width: 100%;
+    width: 100%;
+    align-content: center;
+    position: relative;
+    margin: 0px;
+    clear: both;
 }
-.1210px {
-	width: 1210px;
+body .w{
+    width: 1210px;
+    margin-left: auto;
+    margin-right: auto;
+    clear: both;
 }
 #header {
-	background-color: #F1F1F1;
+    background-color: #F1F1F1;
 }
 .header {
-	height: 30px;
-	width: 1210px;
-	line-height: 30px;
-	margin: 0px auto;
+    height: 30px;
+    line-height: 30px;
+    margin: 0px auto;
 }
 #header > a:hover{
-	background-color: #000;
-	color: red;
+    background-color: #000;
+    color: red;
 }
 .header > .left {
-	float: left;
-	clear: both;
+    float: left;
+    clear: both;
 }
 .header >.left:hover {
-	background-color: #fff;
-	border-left:solid 1px #DDD;
-	border-right:solid 1px #DDD;
+    background-color: #fff;
+    border-left:solid 1px #DDD;
+    border-right:solid 1px #DDD;
 }
 .header > .right {
-	float: right;
-	font-size: 12px;
-	padding-top: 0px;
-	display: inline-block;
+    float: right;
+    font-size: 12px;
+    padding-top: 0px;
+    display: inline-block;
 }
-.search {
-	border-bottom: solid 3px red;
+.logo {
+  width: 300px;
+  height: 100px;
+  background-image: url('../images/jingdonglogo.png') ;
+  background-repeat: no-repeat;
+}
+.logo a {
+  width: 300px;
+  height: 100px;  
+
+}
+.title {
+  position: relative;
+}
+.title > *{
+  float: left;
+}
+.headmenu {
+  border-bottom: solid 2px #B1191A;
+}
+.bodymenu {
+  margin: 0px auto;
+}
+.bodymenu> div{
+  float: left;
+
+}
+.bodymenu #menulist>ul>li{
+  display: block;
+}
+#menulist{
+  width: 210px;
+  height: 466px;
+  margin-top: 0px;
+  clear: left;
+  background-color: #C81623;
+}
+#bodymenu_imageshow {
+  width: 730px;
+  height: 454px;
+  margin: 12px 0px 0px 12px;
+}
+#bodymenu_right {
+  width: 250px;
+  margin-top: 12px;
+  float: right;
+  clear: right;
+}
+.today {
+  margin: 12px 0 0 20px;
+  padding-top: 12px;
+}
+.today >div {
+  float: left;
+}
+.today .left {
+  width: 210px;
+  background-color: #F1F1F1;
+  height: 151px;
+}
+.today .right{
+  width: 1000px;
+  background-color: pink;
+  height: 164px;
+}
+.mc{
+  border: solid 1px #F1F1F1;
+  height: 233px;
+}
+
+.detail {
+  margin: 0px;
+  padding: 20px 0px 0px 0px;
+  clear: both;
+}
+.detail li {
+  display: inline-block;
+  float: left;
+  width: 201px;
+  margin:0px;
+  overflow: hidden;
+}
+.detail_img {
+  padding: 0 35px;
+}
+.detail_info {
+  width: 130px;
+  padding: 0 35px;
+  border-left: solid 1px #F1F1F1;
+}
+.detail ul li:first .detail_inro  {
+  border-left: none;
+  display: inline-block;
+}
+.detail_info a {
+  display: block;
+  width: inherit;
+  font-size: 14px;
+  line-height: 14px;
+  word-break: break-all;
+  height: 30px;
+  overflow: hidden;
+}
+.detail_info p {
+  font-size: 16px;
+  font-weight: 800;
+  color: #C81623;
+  margin-top: 0px;
 }
