--- a/css/main.css
+++ b/css/main.css
@@ -171,3 +171,38 @@ body .w{
   color: #C81623;
   margin-top: 0px;
 }
+.quelity_1{
+  width: 404px;
+  height: 247px;
+  margin-top: 0;
+  background-color:rgb(237, 237, 237);
+  position: relative;
+}
+.quelity_1 a{
+  width: 100%;
+  height: 247px;
+  display: inline-block;
+  position: relative;
+  overflow: hidden;
+}
+.quelity_1 a>p{  
+  width: 363px;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 700;  
+  line-height: 40px;
+  border-bottom: dashed 1px rgb(224,224,224);
+  margin: 0 auto;
+}
+.sub_tit {
+  position: absolute;
+  left: 40px;
+  top:80px;
+  z-index: 1;
+}
+.quelity_1 img {
+  position: absolute;
+  bottom: 0px;
+  overflow: hidden;
+  z-index:0;
+}
